--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,6 +1,13 @@
 #encoding: utf-8
 
 zh-CN:
+  views:
+    pagination:
+      first: "&laquo; 首页"
+      last: "末页 &raquo;"
+      previous: "&lsaquo; 上一页"
+      next: "下一页 &rsaquo;"
+      truncate: "..."
   helpers:
     submit:
       create: "创建"
